[package]
name = "eth_balance_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
ethers = { version = "2.0.14", features = ["abigen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
hyper = "1.6.0"
axum = { version = "0.8.4", features = ["tokio", "http1"] }